feat: Add image field to Peliculas (backend & frontend)
